package com.yhchat.canary.data.repository

import android.util.Log
import com.yhchat.canary.data.model.AddFriendRequest
import com.yhchat.canary.data.api.ApiService
import com.yhchat.canary.data.model.*
import com.yhchat.canary.proto.*
import yh_user.User
import kotlinx.coroutines.flow.first
import okhttp3.MediaType.Companion.toMediaType
import okhttp3.RequestBody.Companion.toRequestBody
import javax.inject.Inject

/**
 * å¥½å‹æ•°æ®ä»“åº“
 */
class FriendRepository @Inject constructor(
    private val apiService: ApiService,
    private val tokenRepository: TokenRepository
) {
    
    private val tag = "FriendRepository"
    
    /**
     * ç”³è¯·æ·»åŠ å¥½å‹/ç¾¤èŠ/æœºå™¨äºº
     */
    suspend fun applyFriend(
        token: String,
        chatId: String,
        chatType: Int, // 1-ç”¨æˆ·ï¼Œ2-ç¾¤èŠï¼Œ3-æœºå™¨äºº
        remark: String
    ): ApiStatus {
        return try {
            val request = AddFriendRequest(
                chatId = chatId,
                chatType = chatType,
                remark = remark
            )
            val response = apiService.addFriend(token, request)
            if (response.isSuccessful) {
                response.body() ?: ApiStatus(code = 0, message = "å“åº”ä¸ºç©º")
            } else {
                ApiStatus(code = 0, message = "ç½‘ç»œè¯·æ±‚å¤±è´¥: ${response.code()}")
            }
        } catch (e: Exception) {
            ApiStatus(code = 0, message = "è¯·æ±‚å¤±è´¥: ${e.message}")
        }
    }
    
    /**
     * è·å–æ‰€æœ‰èŠå¤©å¯¹è±¡ï¼ˆé€šè®¯å½•ï¼‰
     */
    suspend fun getAddressBookList(): Result<User.address_book_list> {
        return try {
            val tokenFlow = tokenRepository.getToken()
            val token = tokenFlow.first()?.token
            if (token.isNullOrEmpty()) {
                Log.e(tag, "âŒ Tokenä¸ºç©º")
                return Result.failure(Exception("ç”¨æˆ·æœªç™»å½•"))
            }
            
            Log.d(tag, "ğŸ“¤ ========== è·å–é€šè®¯å½• ==========")
            
            // æ„å»ºprotobufè¯·æ±‚
            val request = User.address_book_list_send.newBuilder()
                .setNumber("é€šè®¯å½•è¯·æ±‚")
                .build()
            
            val requestBody = request.toByteArray().toRequestBody("application/x-protobuf".toMediaType())
            
            Log.d(tag, "ğŸ“¤ å‘é€è¯·æ±‚...")
            
            val response = apiService.getAddressBookList(token, requestBody)
            
            Log.d(tag, "ğŸ“¥ æœåŠ¡å™¨å“åº”ç : ${response.code()}")
            
            if (response.isSuccessful) {
                response.body()?.let { responseBody ->
                    val bytes = responseBody.bytes()
                    val addressBook = User.address_book_list.parseFrom(bytes)
                    
                    Log.d(tag, "ğŸ“¥ å“åº”çŠ¶æ€ç : ${addressBook.status.code}")
                    Log.d(tag, "ğŸ“¥ å“åº”æ¶ˆæ¯: ${addressBook.status.msg}")
                    Log.d(tag, "ğŸ“¥ åˆ†ç»„æ•°é‡: ${addressBook.dataCount}")
                    
                    if (addressBook.status.code == 1) {
                        Log.d(tag, "âœ… ========== é€šè®¯å½•è·å–æˆåŠŸï¼ ==========")
                        Result.success(addressBook)
                    } else {
                        Log.e(tag, "âŒ è·å–å¤±è´¥: ${addressBook.status.msg}")
                        Result.failure(Exception(addressBook.status.msg))
                    }
                } ?: Result.failure(Exception("å“åº”ä½“ä¸ºç©º"))
            } else {
                val errorBody = response.errorBody()?.string()
                Log.e(tag, "âŒ HTTPé”™è¯¯: ${response.code()}, é”™è¯¯è¯¦æƒ…: $errorBody")
                Result.failure(Exception("è·å–å¤±è´¥: ${response.code()}"))
            }
        } catch (e: Exception) {
            Log.e(tag, "âŒ è·å–é€šè®¯å½•å¼‚å¸¸", e)
            e.printStackTrace()
            Result.failure(e)
        }
    }
}
